--- a/pom.xml
+++ b/pom.xml
@@ -89,13 +89,12 @@
 
 	</dependencies>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus</id>
-			<url>http://52.66.210.171:8081/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-
+<distributionManagement>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://13.234.118.219:8081/nexus/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
